# DiscreteAnalysis_Labs

./: .clang-format  .gitignore  CMakeLists.txt
CourceProject/: CMakeLists.txt
CourceProject/doc/: report.tex
CourceProject/src/: main.cpp  task_for_3.cpp
CourceProject/src/tools/: parser.hpp
CourseProject/: CMakeLists.txt
CourseProject/doc/: report.tex
CourseProject/src/: main.cpp  task_for_3.cpp
CourseProject/src/naive_bayes/: NaiveBayes.cpp  NaiveBayes.hpp
CourseProject/src/tools/: parser.hpp
Lab1/: CMakeLists.txt  main.cpp
Lab1/doc/: report.tex
Lab2/: CMakeLists.txt  main.cpp
Lab2/doc/: report.tex
Lab3/: profiledata.txt
Lab3/doc/: report.tex
Lab4/: CMakeLists.txt  main.cpp
Lab4/doc/: report.tex
Lab5/: CMakeLists.txt  SuffTree.hpp  demo.cpp  main.cpp
Lab5/doc/: report.tex
Lab7/: CMakeLists.txt  main.cpp
Lab7/doc/: report.tex
Lab8/: CMakeLists.txt  main.cpp
Lab8/doc/: report.tex
Lab9/: CMakeLists.txt  main.cpp
Lab9/doc/: report.tex
